examples/errors/parsing/gcd-iter-empty-binder.cn
fun gcd : (Int * Int) -> Int [impure] = {
  (x, y) ->
  iter ( = ((x, y) : (Int * Int))) {
    Done x : Step((Int * Int), Int)
  }
}

main : () [impure] = ()
